# html2dismd

./: .flake8  .gitignore  README.md  pyproject.toml
html2dismd/: __init__.py  config.py  elements.py  utils.py
