[build-system]
requires = ["setuptools"]

[project]
name = "html2dismd"
version = "0.2.0"
description = "Turn HTML into equivalent Discord's Markdown-structured text."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "COPYING"}
authors = [
  {name = "Aaron Swartz", email = "me@aaronsw.com"},
  {name = "Alireza Savand", email = "alireza.savand@gmail.com"},
  {name = "CrystalAlpha358"},
]
maintainers = [
  {name = "CrystalAlpha358"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Communications :: Chat",
  "Topic :: Text Processing :: Markup :: HTML",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/CrystalAlpha358/html2dismd"

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "isort",
  "pyright",
]

[tool.black]
target-version = ["py310"]
line-length = 119

[tool.isort]
profile = "black"
py_version = 310
extra_standard_library = ["tomllib"]
line_length = 119
combine_as_imports = true

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"
